# Cloak

./: Cargo.toml  README.md
pallets/privacy-bridge/: Cargo.toml
pallets/privacy-bridge/src/: benchmarking.rs  circuit.rs  lib.rs  lib.rs.backup  merkle_tree.rs  mock.rs  simple_hash.rs  tests.rs  weights.rs  xcm_config.rs  xcm_tests.rs  zksnark.rs  zksnark_integration_test.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: mod.rs
